save order detail
