# api/controllers/viajes.controller.js
@@ -197,31 +197,31 @@ function addViaje(req, res) {
 
       return order
         .create({
-          companyid: 'hesa',
-          customerid: 'ING-01',
+          companyid: myorder.companyid,
+          customerid: myorder.customerid,
           orderid: myorder.orderid,
-          driverid: 'op-01',
-          truckid: 'TR-890',
-          trailerid1: 'R-01',
-          dollyid: 'D-01',
-          trailerid2: 'R-02',
-          zone: "Zona Centro",
-          assigndate: "2018-12-28 07:06:17",
-          teadate: "2018-12-28T07:06:17.11",
-          enddate: "2018-12-28T07:06:17.11",
-          teastatus: "A tiempo",
-          source: "x",
-          sourceaddr: "xxx",
-          target: "yyy",
-          targetaddr: "999",
-          km: "10",
-          lt: "9",
-          km_lt: "8",
-          price_lt: "7",
-          cost: "6",
-          routeid: "r01",
-          orderadminid: 4,
-          orderstatusid: 1,
+          driverid: myorder.driverid,
+          truckid: myorder.truckid,
+          trailerid1: myorder.trailerid1,
+          dollyid: myorder.dollyid,
+          trailerid2: myorder.trailerid2,
+          zone: myorder.zone,
+          assigndate: myorder.assigndate,
+          teadate: myorder.teadate,
+          enddate: myorder.enddate,
+          teastatus: myorder.teastatus,
+          source: myorder.source,
+          sourceaddr: myorder.sourceaddr,
+          target: myorder.target,
+          targetaddr: myorder.targetaddr,
+          km: myorder.km,
+          lt: myorder.lt,
+          km_lt: myorder.km_lt,
+          price_lt: myorder.price_lt,
+          cost: myorder.cost,
+          routeid: myorder.routeid,
+          orderadminid: myorder.orderadminid,
+          orderstatusid: myorder.orderstatusid,
           orderdetail : myorderdetails
 
         }, {
